snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.pom.sha256
0be1cabfd52f3e64b50166da5aba15ca4974990cedc70938bba6e80e90701679